tests/sources/should-not-compile/semantic-declare.c
int x = 10;
float x = 5.5;
{
    int z = x + y;
    x = z * 2;
}
y = x / 2;